<resources>
    <string name="app_name">UbisecureExercise</string>
    <string name="error_message_username">Enter Valid Username</string>
    <string name="error_message_password">Enter Valid Password</string>
    <string name="error_message_string">Enter Valid Input</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome, your account information is displayed here</string>
</resources>
